@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Employee {
	-employeeId;
	-name;
	-address;
	-phoneNumber;
	-email;
	-soc.
}

class OrganizationRole {
    -organizationRole;
}

class SpecialistDoctor{
    -doctorIndexNumber
}

Company "1" -- "*" Employee : has >
Employee "*" -- "1" OrganizationRole: classified with >
SpecialistDoctor -left-|> Employee


@enduml